--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,11 +27,9 @@ jobs:
       - uses: actions/setup-python@v2
         with:
          python-version: '3.7'
-         
       - name: pip install
-      - run:
+        run:
          pip install build, cython
-      
       - name: build
-      - run: python -m build
+        run: python -m build
       
