--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
          python-version: '3.7'
       - name: pip install
         run:
-         pip install build, cython
+         pip install build cython
       - name: build
         run: python -m build
       
